# quinlight-audio

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  install_prerequisites.sh
.github/: FUNDING.yml
.github/workflows/: pages.yml
HRTF/: NOTICE
flac-codec/: .cargo_vcs_info.json  Cargo.toml
flac-codec/src/: decode.rs
flac-codec/tests/data/: all-frames.flac  comment.flac  cuesheet.flac  picture.flac  seektable.flac  sine.flac
mods/: 2ND_SKAV.S3M  miriel.it
openmpt/: Makefile
openmpt/common/: BuildSettings.h
openmpt/libopenmpt/: libopenmpt.h  libopenmpt_c.cpp  libopenmpt_impl.cpp  libopenmpt_impl.hpp
openmpt/soundlib/: FloatMixer.h  InstrumentSynth.cpp  MixFuncTable.cpp  Mixer.h  ModChannel.h  ModSample.h  Resampler.h  Snd_defs.h  Snd_flt.cpp  Snd_fx.cpp  Sndmix.cpp  modsmp_ctrl.cpp
src/: batch.rs  lib.rs  main.rs  native_diagnostics.rs  openmpt.rs  player.rs  remaster.rs  render.rs  upsample.rs
src/cleanup/: mod.rs
src/engine/: apbwe.rs  audiosr.rs  flowhigh.rs  lavasr.rs  mod.rs
src/gui/: mod.rs  theme.rs
