[package]
name = "quinlight-audio"
version = "0.1.0"
edition = "2024"
authors = ["Kind Computers, LLC"]
description = "Tracker music player and remastering tool presented by Kind Computers"
homepage = "https://www.kindpcs.com"
repository = "https://github.com/Kind-Computers/quinlight-audio"
license = "MIT"
keywords = ["audio", "tracker", "mod", "remaster", "neural"]
categories = ["multimedia::audio"]

[dependencies]
clap = { version = "4", features = ["derive"] }
iced = { version = "0.13", features = ["tokio", "canvas"] }
sdl2 = "0.37"
libc = "0.2"
# gtk3 backend: WSLg lacks xdg-desktop-portal, so the default xdg-portal backend silently no-ops.
rfd = { version = "0.15", default-features = false, features = ["gtk3"] }
hound = "3.5"
tempfile = "3"
crossbeam-channel = "0.5"
dirs = "6"
flac-codec = { path = "flac-codec" }
sha2 = "0.10"
inotify = "0.11"
ac-ffmpeg = "0.19"
compress-tools = "0.15"
rustfft = "6"
image = { version = "0.25", default-features = false, features = ["png"] }
pulp = { version = "0.22", default-features = false, features = ["std", "x86-v3"] }
ebur128 = "0.1"
signal-hook = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = "0.13"
fastrand = "2"
rayon = "1.10"
bytemuck = { version = "1", features = ["derive"] }
sofar = { version = "0.3", features = ["dsp", "resample"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "simd_kernels"
harness = false

[profile.dev]
codegen-units = 32

[profile.release]
opt-level = 2
codegen-units = 256
lto = false
split-debuginfo = "unpacked"
